adds more perfume sections

--- a/index.html
+++ b/index.html
@@ -28,20 +28,42 @@
         </article>
         <article class="perfume-display" id="display2">
             <section class="text-content">
-                <h2 class="section-heading">XXX Perfume</h2>
+                <h2 class="section-heading">212 Perfume</h2>
                 <p class="description">A classy smell of elegance with a long lasting freshness.</p>
                 <p class="bottle-size">300ml Available</p>
             </section>
             <section class="image-section">
                 <div class="image-bg"></div>
-                <img src="./assets/perf2.png"  width="100px" alt="perfume 2" class="image-section-image">
+                <img src="./assets/perf3.png" width="250px" alt="perfume 2" class="image-section-image">
             </section>
         </article>
+        <article class="perfume-display" id="display3">
+          <section class="text-content">
+              <h2 class="section-heading">Cindy Perfume</h2>
+              <p class="description">A classy smell of elegance with a long lasting freshness.</p>
+              <p class="bottle-size">300ml Available</p>
+          </section>
+          <section class="image-section">
+              <div class="image-bg"></div>
+              <img src="./assets/perf2.png"  width="100px" alt="perfume 2" class="image-section-image">
+          </section>
+      </article>
+      <article class="perfume-display" id="display4">
+        <section class="text-content">
+            <h2 class="section-heading">Intellectual Perfume</h2>
+            <p class="description">A classy smell of elegance with a long lasting freshness.</p>
+            <p class="bottle-size">300ml Available</p>
+        </section>
+        <section class="image-section">
+            <div class="image-bg"></div>
+            <img src="./assets/perf4.png" width="250px" alt="perfume 2" class="image-section-image">
+        </section>
+    </article>
         <article class="other-collection">
             <h2 class="others-heading">Other collections</h2>
-            <p class="order">Call us to make your Order! <span class="phone">&phone;</span> 08148833094</p>
+            <p class="order">Call us to make your Order! <a href="tel:08035029320" title="Call me to order"><span class="phone">&phone;</span> 08035029320</a></p>
         </article>
-        <footer>&copy; 2021 - Joizibella Perfumery</footer>
+        <footer>&copy; 2021 - Joy Harry Perfumery</footer>
     </main>
     <script src="main.js"></script>
 </body>
