--- a/index.html
+++ b/index.html
@@ -1,70 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joizibella Perfumery</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Sacramento&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Joizibella Perfumery</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Sacramento&display=swap"
+    rel="stylesheet">
 
 </head>
+
 <body>
-    <main>
-        <header>
-            <img src="./assets/logo.svg" alt="logo" width="80px">
-            <h1>Oil Perfume <br> With A Class</h1>
-        </header>
-        <article class="perfume-display" id="display1">
-            <section class="text-content">
-                <h2 class="section-heading">XXX Perfume</h2>
-                <p class="description">A classy smell of elegance with a long lasting freshness.</p>
-                <p class="bottle-size">300ml Available</p>
-            </section>
-            <section class="image-section">
-                <div class="image-bg"></div>
-                <img src="./assets/perf1.png" width="100px" alt="perfume 1" class="image-section-image">
-            </section>
-        </article>
-        <article class="perfume-display" id="display2">
-            <section class="text-content">
-                <h2 class="section-heading">212 Perfume</h2>
-                <p class="description">A classy smell of elegance with a long lasting freshness.</p>
-                <p class="bottle-size">300ml Available</p>
-            </section>
-            <section class="image-section">
-                <div class="image-bg"></div>
-                <img src="./assets/perf3.png" width="250px" alt="perfume 2" class="image-section-image">
-            </section>
-        </article>
-        <article class="perfume-display" id="display3">
-          <section class="text-content">
-              <h2 class="section-heading">Cindy Perfume</h2>
-              <p class="description">A classy smell of elegance with a long lasting freshness.</p>
-              <p class="bottle-size">300ml Available</p>
-          </section>
-          <section class="image-section">
-              <div class="image-bg"></div>
-              <img src="./assets/perf2.png"  width="100px" alt="perfume 2" class="image-section-image">
-          </section>
-      </article>
-      <article class="perfume-display" id="display4">
-        <section class="text-content">
-            <h2 class="section-heading">Intellectual Perfume</h2>
-            <p class="description">A classy smell of elegance with a long lasting freshness.</p>
-            <p class="bottle-size">300ml Available</p>
-        </section>
-        <section class="image-section">
-            <div class="image-bg"></div>
-            <img src="./assets/perf4.png" width="250px" alt="perfume 2" class="image-section-image">
-        </section>
+  <main>
+    <header>
+      <img src="./assets/logo.svg" alt="logo" width="80px">
+      <h1>Oil Perfume <br> With A Class</h1>
+    </header>
+    <article class="perfume-display" id="display1">
+      <section class="text-content">
+        <h2 class="section-heading">XXX Perfume</h2>
+        <p class="description">A classy smell of elegance with a long lasting freshness.</p>
+        <p class="bottle-size">300ml Available</p>
+      </section>
+      <section class="image-section">
+        <div class="image-bg"></div>
+        <img src="./assets/perf1.png" width="100px" alt="perfume 1" class="image-section-image">
+      </section>
     </article>
-        <article class="other-collection">
-            <h2 class="others-heading">Other collections</h2>
-            <p class="order">Call us to make your Order! <a href="tel:08035029320" title="Call me to order"><span class="phone">&phone;</span> 08035029320</a></p>
-        </article>
-        <footer>&copy; 2021 - Joy Harry Perfumery</footer>
-    </main>
-    <script src="main.js"></script>
+    <article class="perfume-display" id="display2">
+      <section class="text-content">
+        <h2 class="section-heading">212 Perfume</h2>
+        <p class="description">A classy smell of elegance with a long lasting freshness.</p>
+        <p class="bottle-size">300ml Available</p>
+      </section>
+      <section class="image-section">
+        <div class="image-bg"></div>
+        <img src="./assets/perf3.png" width="250px" alt="perfume 2" class="image-section-image">
+      </section>
+    </article>
+    <article class="perfume-display" id="display3">
+      <section class="text-content">
+        <h2 class="section-heading">Cindy Perfume</h2>
+        <p class="description">A classy smell of elegance with a long lasting freshness.</p>
+        <p class="bottle-size">300ml Available</p>
+      </section>
+      <section class="image-section">
+        <div class="image-bg"></div>
+        <img src="./assets/perf2.png" width="100px" alt="perfume 2" class="image-section-image">
+      </section>
+    </article>
+    <article class="perfume-display" id="display4">
+      <section class="text-content">
+        <h2 class="section-heading">Intellectual Perfume</h2>
+        <p class="description">A classy smell of elegance with a long lasting freshness.</p>
+        <p class="bottle-size">300ml Available</p>
+      </section>
+      <section class="image-section">
+        <div class="image-bg"></div>
+        <img src="./assets/perf4.png" width="250px" alt="perfume 2" class="image-section-image">
+      </section>
+    </article>
+    <article class="other-collection">
+      <h2 class="others-heading">Other collections</h2>
+      <p class="order">Call us to make your Order! <a href="tel:08035029320" title="Call me to order"><span
+            class="phone">&phone;</span> 08035029320</a></p>
+    </article>
+    <div class="other-apps">
+      <div class="dice">
+        <h2>Joy's Dice Game</h2>
+        <div class="dice-result">
+          <p>-</p>
+        </div>
+        <button id="button-dice">Throw Dice</button>
+      </div>
+      <div class="calculator">
+        <h2>Joy's Calculator</h2>
+        <form name="myform" id="calculator-wrapper">
+          <fieldset>
+            <legend>Joy's Calculator</legend>
+            <input type="text" name="mytext" readonly="readonly" id="screen" />
+            <div class="keys">
+              <input type="button" id="button" value="9" onclick="myform.mytext.value +='9'" />
+              <input type="button" id="button" value="8" onclick="myform.mytext.value +='8'" />
+              <input type="button" id="button" value="7" onclick="myform.mytext.value +='7'" />
+              <input type="reset" id="button" value="delete" onclick="myform.mytext.value +='" "'" />
+            </div>
+            <div class="keys">
+              <input type="button" id="button" value="6" onclick="myform.mytext.value +='6'" />
+              <input type="button" id="button" value="5" onclick="myform.mytext.value +='5'" />
+              <input type="button" id="button" value="4" onclick="myform.mytext.value +='4'" />
+              <input type="button" id="button" value="/" onclick="myform.mytext.value +='/'" />
+            </div>
+
+            <div class="keys">
+              <input type="button" id="button" value="3" onclick="myform.mytext.value +='3'" />
+              <input type="button" id="button" value="2" onclick="myform.mytext.value +='2'" />
+              <input type="button" id="button" value="1" onclick="myform.mytext.value +='1'" />
+              <input type="button" id="button" value="*" onclick="myform.mytext.value +='*'" />
+            </div>
+
+            <div class="keys">
+              <input type="button" id="button" value="." onclick="myform.mytext.value +='.'" />
+              <input type="button" id="button" value="0" onclick="myform.mytext.value +='0'" />
+              <input type="button" id="button" value="=" onclick="myform.mytext.value =eval(myform.mytext.value)" />
+              <input type="button" id="button" value="+" onclick="myform.mytext.value +='+'" />
+            </div>
+           
+            <input type="button" id="button" value="==" onclick="myform.mytext.value +='=='" />
+
+          </fieldset>
+        </form>
+      </div>
+    </div>
+    <style>
+      .keys {
+        display: flex;
+        justify-content: space-between;
+        margin: 1em auto;
+      }
+
+      .keys input {
+        flex: 1;
+        padding: 5px;
+        margin: 0.22em;
+      }
+
+      .calculator {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      #calculator-wrapper {
+        margin-top: 1em;
+        max-width: 360px;
+      }
+
+      #screen {
+        width: 100%;
+        padding: 0.5em;
+        background-color: rgb(242, 229, 255);
+        border: none;
+        height: 60px;
+        display: block;
+        margin: 1em auto;
+      }
+
+      form {
+        background-color: rgb(45, 0, 67);
+        height: 360px;
+        padding-top: 1em;
+        width: 80%;
+      }
+
+      fieldset {
+        height: 310px;
+        border: none;
+        padding: 1em;
+      }
+
+      legend {
+        color: hotpink;
+      }
+
+      @media (min-width: 520px) {
+        form {
+          width: 480px;
+
+        }
+      }
+    </style>
+
+    <footer>&copy; 2021 - Joy Harry Perfumery</footer>
+  </main>
+  <script src="./script.js"></script>
 </body>
+
 </html>
