--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <form name="myform" id="calculator-wrapper">
           <fieldset>
             <legend>Joy's Calculator</legend>
-            <input type="text" name="mytext" readonly="readonly" id="screen" />
+            <input type="text" name="mytext" readonly="readonly" id="screen"  value="0"/>
             <div class="keys">
               <input type="button" id="button" value="9" onclick="myform.mytext.value +='9'" />
               <input type="button" id="button" value="8" onclick="myform.mytext.value +='8'" />
